mostly powerline updates and some new packages

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,7 +51,6 @@ bind-key - split-window -v
 bind-key _ split-window -v
 bind-key | split-window -h
 
-# look good
-set -g status-fg white
-set -g status-bg default
-set -g status-attr bright
+# bg fix?
+#set -g status-bg default
+#set -g status-fg white
