--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -200,7 +200,17 @@ song_window_title_format = "{%a - }{%t}|{%f}"
 ## E.g. {lr} will give you right aligned column of lengths.
 ##
 #
-song_columns_list_format = "(7f)[green]{l} (25)[blue]{a} (40)[cyan]{t} (30)[]{b} (7f)[yellow]{y}"
+## - 0 - default window color (discards all other colors)
+## - 1 - black
+## - 2 - red
+## - 3 - green
+## - 4 - yellow
+## - 5 - blue
+## - 6 - magenta
+## - 7 - cyan
+## - 8 - white
+## - 9 - end of current color
+song_columns_list_format = "(7f)[cyan]{l} (25)[]{a} (40)[cyan]{t} (30)[white]{b} (7f)[cyan]{y}"
 #
 ##### various settings #####
 #
