colorschemes, bundle organization

--- a/tmux.conf
+++ b/tmux.conf
@@ -33,13 +33,14 @@ bind -t vi-copy y copy-selection
 
 # window titles
 set -g set-titles on
+set -g set-titles-string "☂  :: #T"
 
 # tab navigation
 bind-key -n C-Tab next-window
 bind-key -n C-S-Tab previous-window
 
 # turn off auto rename
-set-option -g allow-rename off
+set-option -g allow-rename on
 
 # bindings to preserve previous path
 bind c new-window -c "#{pane_current_path}"
