some vimrc updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,7 @@ bind-key -n C-Tab next-window
 bind-key -n C-S-Tab previous-window
 
 # turn off auto rename
-set-option -g allow-rename on
+set-option -g allow-rename off
 
 # bindings to preserve previous path
 bind c new-window -c "#{pane_current_path}"
