Fix path to .gpg files in msmtp config

--- a/mutt/.msmtprc
+++ b/mutt/.msmtprc
@@ -9,11 +9,11 @@ tls_trust_file /etc/ssl/certs/ca-certificates.crt
 account personal
 from tom.auty@gmail.com
 user tom.auty@gmail.com
-passwordeval "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.msmtp-personal.gpg"
+passwordeval "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.mutt/auth/.msmtp-personal.gpg"
 
 account work
 from tom@docnetwork.org
 user tom@docnetwork.org
-passwordeval "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.msmtp-work.gpg"
+passwordeval "gpg --quiet --for-your-eyes-only --no-tty --decrypt ~/.mutt/auth/.msmtp-work.gpg"
 
 account default : personal
