--- a/compton/.compton.conf
+++ b/compton/.compton.conf
@@ -129,7 +129,9 @@ fade-out-step = 0.03;
 # no-fading-openclose = true;
 
 # Specify a list of conditions of windows that should not be faded.
-fade-exclude = [ ];
+fade-exclude = [
+  "class_g = 'maim'"
+];
 
 #################################
 #
