--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -69,7 +69,7 @@ set status_bar_on_top false
 set draw_progress_bar_in_status_bar true
 
 # Draw borders around columns?
-set draw_borders true
+set draw_borders false
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -85,17 +85,17 @@ set display_size_in_status_bar true
 set display_tags_in_all_columns true
 
 # Set a title for the window?
-set update_title false
+set update_title true
 
 # Set the title to "ranger" in the tmux program?
-set update_tmux_title false
+set update_tmux_title true
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
 set shorten_title 3
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
-set tilde_in_titlebar false
+set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
 set max_history_size 100
@@ -105,7 +105,7 @@ set max_console_history_size 100
 set scroll_offset 8
 
 # Flush the input after each key hit?  (Noticable when ranger lags)
-set flushinput true
+set flushinput false
 
 # Padding on the right when there's no preview?
 # This allows you to click into the space to run the file.
@@ -281,6 +281,7 @@ map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp shell -d echo -n %d/%f | xsel -i
 map yd shell -d echo -n %d    | xsel -i
 map yn shell -d echo -n %f    | xsel -i
+map bg shell nitrogen --set-scaled %f
 
 # Filesystem Operations
 map =  chmod
@@ -296,7 +297,7 @@ map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
-map DD shell mv --backup=numbered -t /home/mariusz/.cache/Trash %s
+map DD shell mv --backup=numbered -t /home/tom/.cache/Trash %s
 map dd cut
 map ud uncut
 map da cut mode=add
