Proper mailcap location, auto_view html. No urxvt scrollback (tmux)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@
 unbind C-b
 set -g prefix C-a
 setw -g mode-keys vi
-set -g mode-mouse on
+set -g mode-mouse off
 
 # Unbinds
 # `-> these are part of the default mappings
