[tmux] larger resizing operations

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,10 +38,10 @@ bind-key - split-window -v
 bind-key _ split-window -v
 bind-key | split-window -h
 
-bind C-h resize-pane -L
-bind C-j resize-pane -D
-bind C-k resize-pane -U
-bind C-l resize-pane -R
+bind C-h resize-pane -L 5
+bind C-j resize-pane -D 5
+bind C-k resize-pane -U 5
+bind C-l resize-pane -R 5
 
 bind h select-pane -L
 bind j select-pane -D
