--- a/compton/.compton.conf
+++ b/compton/.compton.conf
@@ -27,7 +27,7 @@ glx-copy-from-front = false;
 # My tests on nouveau shows a 200% performance boost when only 1/4 of the screen is updated.
 # May break VSync and is not available on some drivers.
 # Overrides --glx-copy-from-front.
-# glx-use-copysubbuffermesa = true;
+ glx-use-copysubbuffermesa = false;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes, but is known to break things on some drivers (LLVMpipe).
@@ -177,7 +177,7 @@ paint-on-overlay = true;
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
 # unless you wish to specify a lower refresh rate than the actual value.
-sw-opti = false;
+sw-opti = true;
 
 # Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
 # Known to cause flickering when redirecting/unredirecting windows.
