--- a/psql/.psqlrc
+++ b/psql/.psqlrc
@@ -8,11 +8,11 @@
 -- Display timing after each command
 \timing
 
-\set PROMPT1 '%[%033[31;5m%]%x%[%033[0m%]%[%033[31;1m%]%n%[%033[33;1m%]@%[%033[32;1m%m%[%033[0m%] %[%033[37;1m%]%/%[%033[0m%] > '
-\set PROMPT2 '> '
+-- \set PROMPT1 '%[%033[31;5m%]%x%[%033[0m%]%[%033[31;1m%]%n%[%033[33;1m%]@%[%033[32;1m%m%[%033[0m%] %[%033[37;1m%]%/%[%033[0m%] > '
+-- \set PROMPT2 '> '
 
 -- Use best available output format
-\x auto
+-- \x auto
 \set VERBOSITY verbose
 \set HISTFILE ~/.psql_history- :DBNAME
 \set HISTCONTROL ignoredups
