tmux: mouse mode and quick escape

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@
 unbind C-b
 set -g prefix C-a
 setw -g mode-keys vi
-set -g mode-mouse off
+set -g mode-mouse on
 
 # Unbinds
 # `-> these are part of the default mappings
@@ -74,6 +74,7 @@ set -g repeat-time 100
 setw -g clock-mode-colour blue
 setw -g clock-mode-style 12
 setw -g alternate-screen on
+set -sg escape-time 0
 
 
 #-------~---~----------~----------~----
