--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,7 +67,7 @@ setw -g utf8 on
 #-------~---~----------~----------~----
 set -g default-terminal "screen-256color"
 set -g default-shell /bin/zsh
-set -g default-command /bin/zsh
+set -g default-command "reattach-to-user-namespace -l zsh"
 set -g set-titles on
 set -g set-titles-string 'tmux: #T'
 set -g repeat-time 100
@@ -81,10 +81,12 @@ set -sg escape-time 0
 # Copy/Paste
 #-------~---~----------~----------~----
 bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "xclip -selection c"
+#bind -t vi-copy y copy-pipe "xclip -selection c"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy y copy-selection
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "xclip -selection c"
+bind-key -t vi-copy Enter copy-selection
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -t vi-copy Enter copy-pipe "xclip -selection c"
 
 
 #-------~---~----------~----------~----
@@ -113,3 +115,12 @@ set -g status-left-fg black
 set -g status-right '#(cat /proc/loadavg | cut -d\\  -f-3) #[fg=black,bold]| %H:%M '
 
 
+#-------~---~----------~----------~----
+# Vim Integration
+#-------~---~----------~----------~----
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
