Re-do vim from scratch

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -61,6 +61,7 @@ set -g display-panes-time 1000
 setw -g automatic-rename on
 setw -g monitor-activity on
 setw -g utf8 on
+set -g history-limit 9000
 
 #-------~---~----------~----------~----
 # Misc
