Rework zprezto for performance improvements
- Removed original zpresto code
- Updated tmux for new bindings
- Added vimrc updates

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,7 +11,7 @@
 unbind C-b
 set -g prefix C-a
 setw -g mode-keys vi
-set -g mode-mouse on
+#set -g mode-mouse on
 
 # Unbinds
 # `-> these are part of the default mappings
@@ -51,8 +51,10 @@ bind l select-pane -R
 #-------~---~----------~----------~----
 # Windows / Panes
 #-------~---~----------~----------~----
-setw -g mouse-select-window on
-setw -g mouse-select-pane on
+#setw -g mouse-select-window on
+#setw -g mouse-select-pane on
+set -g mouse on
+set -g mouse-utf8 on
 set -g pane-active-border-fg blue
 set -g display-panes-colour white
 set -g display-panes-active-colour blue
