--- a/npm/.npmrc
+++ b/npm/.npmrc
@@ -5,3 +5,4 @@ init.author.email=tom.auty@gmail.com
 init.author.url=http://tomauty.cc/
 init.license=GPLv3+
 email=tom.auty@gmail.com
+//registry.npmjs.org/:_authToken=13fcda97-7adc-455e-be8e-f4fca799fff6
