--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,7 +54,7 @@ bind l select-pane -R
 #setw -g mouse-select-window on
 #setw -g mouse-select-pane on
 set -g mouse on
-set -g mouse-utf8 on
+#set -g mouse-utf8 on
 set -g pane-active-border-fg blue
 set -g display-panes-colour white
 set -g display-panes-active-colour blue
