--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "dotbot-brew"]
 	path = dotbot-brew
 	url = https://github.com/d12frosted/dotbot-brew.git
+[submodule "colors/everforest"]
+	path = colors/everforest
+	url = https://github.com/icewind/everforest.iterm2.git
