--- a/tmux.conf
+++ b/tmux.conf
@@ -14,8 +14,11 @@ set-option -g allow-rename off
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
+set -g @plugin 'TanglingTreats/tmux-everforest' # Adds to the list of plugins
+set -g @tmux-everforest 'dark-medium' # Sets the option to select the theme. Also the default.
+
+#set -g @plugin 'rose-pine/tmux'
+#set -g @rose_pine_variant 'main' # Options are 'main', 'moon' or 'dawn'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
