Tmux and everforest updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,12 @@ bind-key C-a send-prefix
 bind | split-window -h
 bind - split-window -v
 
+# smart pane switching with awareness of vim splits
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 set -g mouse on
 
 # don't rename windows automatically
